2005-08-11  Mark Wielaard  <mark@klomp.org>

	* examples/gnu/classpath/examples/datatransfer/Demo.java:
	New example.

2005-08-11  Tom Tromey  <tromey@redhat.com>

	For PR classpath/23008:
	* gnu/java/nio/charset/UTF_16Decoder.java (decodeLoop): Correctly
	mask bytes when constructing characters.

2005-08-11  Mark Wielaard  <mark@klomp.org>

	* native/jni/classpath/Makefile.am (EXTRA_DIST): Add classpath_jawt.h.
	* include/gnu_java_awt_peer_qt_*: Removed.

2005-08-11  Audrius Meskauskas <AudriusA@Bioinformatics.org>

        * org/omg/PortableInterceptor/IORInfoOperations.java,
        org/omg/PortableInterceptor/IORInterceptor.java,
        org/omg/PortableInterceptor/IORInterceptorOperations.java,
        org/omg/PortableInterceptor/IORInfo.java: New files.

2005-08-11  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTable
	(rowAtPoint): Added in a check for null. Was getting NPE.
	(columnAtPoint): Likewise.

2005-08-11  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/basic/BasicViewportUI.java
	(paintSimple): Changed to paint the portBounds from (0,0).

2005-08-11  Tom Tromey  <tromey@redhat.com>

	* java/awt/image/ConvolveOp.java (filter): Defer numBands check
	until after null check.  PR classpath/22999.

2005-08-11  Tom Tromey  <tromey@redhat.com>

	* java/util/Observable.java (addObserver): Throw
	NullPointerException if necessary.  PR classpath/23279.

2005-08-11  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/qt/QtMenuComponentPeer.java,
	gnu/java/awt/peer/qt/QtGraphics.java,
	gnu/java/awt/peer/qt/QtTextFieldPeer.java,
	gnu/java/awt/peer/qt/QtFramePeer.java,
	gnu/java/awt/peer/qt/QtPanelPeer.java,
	gnu/java/awt/peer/qt/QtToolkit.java,
	gnu/java/awt/peer/qt/QtWindowPeer.java,
	gnu/java/awt/peer/qt/QtButtonPeer.java,
	gnu/java/awt/peer/qt/QtImageGraphics.java,
	gnu/java/awt/peer/qt/QtContainerPeer.java,
	gnu/java/awt/peer/qt/QtComponentPeer.java,
	gnu/java/awt/peer/qt/QtListPeer.java,
	gnu/java/awt/peer/qt/QtChoicePeer.java,